--- a/client/pug/index.pug
+++ b/client/pug/index.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         meta(charset='UTF-8')
+        meta(name='viewport',content='width=device-width, initial-scale=1')
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css')
         link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Indie+Flower|Noto+Sans+TC&display=swap')
         link(rel='stylesheet', href='/css/index.css')
@@ -11,7 +12,7 @@ html
             nav.navbar.navbar-dark.mb-auto
                 .container
                     a.navbar-brand.h1.mb-0(href='/') Dve.Tw
-                    button#recent.btn.btn-outline-warning 近期紀錄
+                    button#bug_report.btn.btn-outline-warning 回報Bug
             main.inner(role='main')
                 h1 讓網路世界更簡單！
                 p.mb-3
@@ -44,4 +45,7 @@ html
                 p(style={"text-overflow": "ellipsis","overflow": "hidden", "white-space": "nowrap"})
                     | 原網址：
                     a#original_url
+
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js')
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js')
         script(src='/js/index.min.js')
