--- a/client/pug/index.pug
+++ b/client/pug/index.pug
@@ -1,3 +1,7 @@
+// TODO:
+// - OG:image...
+// - SEO(?
+// - favicon(?
 doctype html
 html
     head
@@ -48,4 +52,5 @@ html
 
         script(src='https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js')
+        script(src='https://unpkg.com/axios/dist/axios.min.js')
         script(src='/js/index.min.js')
